# milicookie_prototype

./: README.md  app.py  pyproject.toml
defense_news_korean_daily_digest_v1_crewai-project (1)/: app.py
defense_news_korean_daily_digest_v1_crewai-project (1)/src/defense_news_korean_daily_digest/: crew.py  main.py
defense_news_korean_daily_digest_v1_crewai-project (1)/src/defense_news_korean_daily_digest/config/: agents.yaml  tasks.yaml
defense_news_korean_daily_digest_v1_crewai-project (1)/templates/: index.html
src/defense_news_korean_daily_digest/: crew.py
src/defense_news_korean_daily_digest/config/: agents.yaml
templates/: index.html
